--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,8 @@ a {
 
 p {
     font-size: 16px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .hero {
@@ -123,13 +125,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
