--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -47,7 +47,7 @@ a {
 }
 
 p {
-    font-size: 18px;
+    font-size: 16px;
     text-align: justify;
     text-justify: inter-word;
 }
@@ -147,3 +147,9 @@ footer h2 {
 footer p {
     text-align: center;
 }
+
+@media screen and (max-widht:1000px) {
+    p {
+        font-size: 16px;
+    }
+} 
