--- a/assets/style.css
+++ b/assets/style.css
@@ -148,8 +148,9 @@ footer p {
     text-align: center;
 }
 
-@media screen and (max-widht:1000px) {
-    p {
-        font-size: 16px;
-    }
+@media screen and (max-width: 992px) {
+   nav {
+   flex-direction: column;
+    background-color: #ffffff;
+   }
 } 
